[package]
name = "ssup"
version = "0.1.0"
edition = "2021"

[dependencies]
# http request
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
cookie_store = "0.15.0"
reqwest_cookie_store = "0.2.0"
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"

# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3.17"
async-stream = "0.3.2"

# serialize/deserialize
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
serde_json = "1.0"

# algorithms/structures
base64 = "0.13.0"
bytes = "1.1.0"
lazy_static = "1.4.0"
parking_lot = "0.12.0"

# error handling
anyhow = "1"
thiserror = "1"
