[package]
name = "sswa"
version = "0.1.0"
edition = "2021"

[dependencies]
ssup = { path = "../ssup" }

clap = { version = "3.0.14", features = ["derive"] }
anni-clap-handler = { git = "https://github.com/ProjectAnni/anni", features = ["async"] }
directories-next = "2.0.0"

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
anyhow = "1"
log = "0.4.14"

dotenv = "0.15.0"
indicatif = "0.17.0-rc.2"
regex = "1"
