[package]
name = "sswa"
version = "0.2.0"
edition = "2021"

[dependencies]
ssup = { path = "../ssup" }
tinytemplate = { path = "../tinytemplate" }

clap = { version = "3.0.14", features = ["derive"] }
anni-clap-handler = { git = "https://github.com/ProjectAnni/anni", features = ["async"] }
directories-next = "2.0.0"
tempfile = "3.3.0"

tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
anyhow = "1"
log = "0.4.14"

requestty = "0.3.0"
indicatif = { version = "=0.17.0-rc.10", features = ["improved_unicode"] }
regex = "1"
rand = "0.8.4"
date_time_parser = "0.1.1"
chrono = "0.4"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
